--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -48,43 +51,128 @@
     </header>
 
     <main>
-        <section class="flex height section_content odd ">
-            <div class="image">image</div>
-            <div class="text">text</div>
+        <section class="flex section_content odd ">
+            <div class="image">
+                <img src="img_discord/item1.svg" alt="reading frog">
+            </div>
+            <div class="text">
+                <h1 id="luogo">Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut consequuntur fugit expedita, possimus
+                    doloremque iure odio, et praesentium dolorem sunt corporis quas repudiandae libero numquam, totam
+                    labore porro cupiditate est.</p>
+            </div>
         </section>
 
-        <section class="flex height section_content even">
-            <div class="text">text</div>
-            <div class="image">image</div>
+        <section class="flex section_content even ">
+
+            <div class="text">
+                <h1 id="dove">Dove trovarsi è facile</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut consequuntur fugit expedita, possimus
+                    doloremque iure odio, et praesentium dolorem sunt corporis quas repudiandae libero numquam, totam
+                    labore porro cupiditate est.</p>
+            </div>
+
+            <div class="image">
+                <img src="img_discord/item2.svg" alt="reading frog">
+            </div>
+
         </section>
 
-        <section class="flex height section_content odd ">
-            <div class="image">image</div>
-            <div class="text">text</div>
+        <section class="flex section_content odd ">
+            <div class="image">
+                <img src="img_discord/item3.svg" alt="reading frog">
+            </div>
+            <div class="text">
+                <h1 id="luogo">Da pochi a un fandom</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut consequuntur fugit expedita, possimus
+                    doloremque iure odio, et praesentium dolorem sunt corporis quas repudiandae libero numquam, totam
+                    labore porro cupiditate est.</p>
+            </div>
         </section>
 
-        <section class="flex height section_content even last_section">
-            <div class="text">text</div>
-            <div class="image">image</div>
-            <div class="text">text</div>
+        <section class="flex  section_content even last_section">
+            <div class="text affidabile">
+                <h1>Tecnologia affidabile per tenersi in contatto </h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque possimus aliquam nihil quod tempore
+                    ad? In neque, sit iusto quasi consequuntur voluptate quos quia recusandae. Delectus corporis quam
+                    fugit debitis?</p>
+            </div>
+            <div class="image">
+                <img src="img_discord/item4-big.svg" alt="">
+            </div>
+            <div class="text avventura">
+                <h3>Pronto a iniziare la tua avventura?</h3>
+            </div>
         </section>
     </main>
 
 
-    <footer class=" height">
+    <footer class=" flex">
+        <div class="flex row-links">
+            <div class="flex menu-sx">
+                <h3>Il tuo posto per parlare</h3>
 
-        <div class="flex block1">
-            <div class="text1">text</div>
-            <div class="text2">text</div>
-            <div class="text3">text</div>
-            <div class="text4">text</div>
-            <div class="text5">text</div>
+                <div class="italiano">
+                    <img src="img_discord/ita.png" alt="">
+                    <h4>Italiano&#5167 </h4>
+                </div>
+            </div>
+
+            <div class=" flex foot-col">
+                <h4 class="blue">Prodotto</h4>
+                <h4> <a href="#">Scarica</a></h4>
+                <h4> <a href="#">Perchè discord</a></h4>
+                <h4> <a href="#">Nitro</a></h4>
+                <h4> <a href="#">Sicurezza</a></h4>
+                <h4> <a href="#">Assistenza</a></h4>
+
+            </div>
+
+            <div class="flex foot-col">
+                <h4 class="blue">Compagnia</h4>
+                <h4> <a href="#">Chi siamo</a></h4>
+                <h4> <a href="#">Lavora con noi</a></h4>
+                <h4> <a href="#">Marchio</a></h4>
+                <h4> <a href="#">Redazione</a></h4>
+                <h4> <a href="#">Negozio</a></h4>
+
+
+
+            </div>
+            <div class="flex foot-col">
+                <h4 class="blue">Risorse</h4>
+                <h4> <a href="#">Scarica</a></h4>
+                <h4> <a href="#">Perchè discord</a></h4>
+                <h4> <a href="#">Nitro</a></h4>
+                <h4> <a href="#">Sicurezza</a></h4>
+                <h4> <a href="#">Assistenza</a></h4>
+                <h4> <a href="#">Scarica</a></h4>
+                <h4> <a href="#">Perchè discord</a></h4>
+                <h4> <a href="#">Nitro</a></h4>
+                <h4> <a href="#">Sicurezza</a></h4>
+                <h4> <a href="#">Assistenza</a></h4>
+            </div>
+            <div class="flex foot-col">
+                <h4 class="blue">Norme</h4>
+                <h4> <a href="#">Scarica</a></h4>
+                <h4> <a href="#">Perchè discord</a></h4>
+                <h4> <a href="#">Nitro</a></h4>
+                <h4> <a href="#">Sicurezza</a></h4>
+                <h4> <a href="#">Assistenza</a></h4>
+            </div>
         </div>
+
+
+
 
         <hr>
         <div class="flex block2">
-            <div class="logo">logo</div>
-            <div class="button">button</div>
+            <div class="logo">
+                <img src="img_discord/logo.svg" alt="">
+            </div>
+            <div class="button">
+                <button id="button-footer">Registrati</button>
+            </div>
         </div>
 
     </footer>
