Aggiunta scarica per mac button

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             <div class="text avventura">
                 <h3>Pronto a iniziare la tua avventura?</h3>
             </div>
+
+            <div class="scarica-button">
+                <button>&#8595 Scarica per mac</button>
+            </div>
         </section>
     </main>
 
